postgres/pgadmin-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin-app
  template:
    metadata:
      labels:
        app: pgadmin-app
    spec:
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: data-pgadmin
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
          name: pgadmin-port
        volumeMounts:
          - name: pgadmin-data
            mountPath: /var/lib/pgadmin
        resources: {}
        securityContext:
          runAsUser: 0
          runAsGroup: 0
