postgres/pgadmin-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-dep
spec:
  ports:
  - port: 80
    protocol: TCP
    name: pgadmin-port
  selector:
    app: pgadmin-app
