postgres/pgadmin-kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
    - pgadmin.dev.local
    secretName: pgadmin-tls
  ingressClassName: nginx
  rules:
  - host: pgadmin.dev.local
    http:
      paths:
      - backend:
          service:
            name: pgadmin-dep
            port:
              number: 80
        path: /
        pathType: Prefix
